Change from Gorm DB to SQL DB and ADD Get restaurant by ID
